Using Gradle modularity support - added Gradle wrapper 6.6.1 - removed Gradle wrapper from ignore file
Signed-off-by: Paul Scholz <paul.scholz@scholzi100.de>